--- a/HTMLCSS/dateien/einheit7/uebungen/006_min_max_breite/index.html
+++ b/HTMLCSS/dateien/einheit7/uebungen/006_min_max_breite/index.html
@@ -7,8 +7,10 @@
 	<style>
 		
 		div {
-			width: 400px;
+			width: 80%;
 			height: 400px;
+			min-width: 400px;
+			max-width: 800px;
 			
 			background: #123456;
 
