--- a/HTMLCSS/dateien/einheit7/uebungen/007_margin/index.html
+++ b/HTMLCSS/dateien/einheit7/uebungen/007_margin/index.html
@@ -11,6 +11,27 @@
 			height: 150px;
 			
 			background: #123456;
+
+			margin-bottom: 20px;
+		}
+
+		.box1 {
+			margin-left: 30px;
+			margin-top: 40px;
+		}
+
+		.box2 {
+			margin: 60px 70px;
+		}
+
+		.box3 {
+			margin: 20px 10px 5px;
+		}
+
+		.box4 {
+			margin-left: auto;
+			margin-right: auto;
+			margin-bottom: 0;
 		}
 
 	</style>
