--- a/HTMLCSS/dateien/einheit7/uebungen/008_padding/index.html
+++ b/HTMLCSS/dateien/einheit7/uebungen/008_padding/index.html
@@ -11,6 +11,36 @@
 			height: 150px;
 			
 			background: #123456;
+
+			padding: 30px;
+		}
+
+		.box1 {
+			padding-right: 20px;
+			padding-left: 50px;
+			padding-top: 10px;
+		}
+		
+		.box2 {
+			padding: 15px 60px 10px;
+		}
+		
+		.box3 {
+			padding: 20px;
+			padding-top: 0;
+
+			/* oder */
+
+			padding: 0 20px 20px;
+
+			/* oder */
+
+			padding: 0 20px 20px 20px;
+		}
+		
+		.box4 {
+			padding: 10px 20px 50px 15px;
+			
 		}
 
 	</style>
