--- a/HTMLCSS/dateien/einheit7/uebungen/010_boxmodell/index.html
+++ b/HTMLCSS/dateien/einheit7/uebungen/010_boxmodell/index.html
@@ -9,7 +9,9 @@
 		div {
 			height: 80px;
 			background: fuchsia;
-			width: 420px;
+			width: 354px;
+			padding: 25px;
+			border: 8px solid blue;
 		}
 
 	</style>
